--- a/index.html
+++ b/index.html
@@ -66,25 +66,61 @@
     <h1>THE POTENTIAL PROBLEM</h1>
   </div>
 
-    <div class="content">
-      <p>
-        This project grew out of my own experiences with technology. Since I was a kid, I have been fascinated by
-        technology, always desiring the latest and greatest. After five years working in Apple stores, and more
-        in the tech support field in general, I have seen how technology can cause a wide range of emotions as well
-        as cause divides among families and friends. I have seen parents and children fighting over which upgrades they are
-        allowed, couples arguing under their breath about costs, or customers becoming far more rude and frustrated
-        with employees than I usually
-        see strangers become towards one another. However, I have also witnessed how technology can be the catalyst
-        to forge new relationships, to bring people together. I see that in the way that I made many lifelong
-        friends during my time at Apple, but on a broader scale I have seen the way that technology can bring
-        people together across the country and world, a space to create community.<br><br>
-        I hope that Project MESH can be a platform and gathering place for people in my community and beyond to
-        shares their perspectives about the way that technology has shaped our communities and relationships in
-        today’s world. I hope to create an ongoing dialogue where we can all help each other to be more mindful
-        about how technology is impacting us, and to be more mindful in our relationships in general.
-
-      </p>
+  <div class="problem">
+      <ul>
+        <li>
+          <p>
+            Mesh is a dialogue about how technology changes the way we communicate with each other and with ourselves.
+          </p>
+        </li>
+        <li>
+          <p>
+            When you are in a group of people who are more absorbed by their phones than by the people they are with.
+          </p>
+        </li>
+        <li>
+          <p>
+              When you mindlessly scroll through your phone, minutes or hours disappearing.
+          </p>
+        </li>
+        <li>
+          <p>
+              When you are able to build community with people across the world.
+          </p>
+        </li>
+        <li>
+          <p>
+              When you ghost or get ghosted.
+          </p>
+        </li>
+        <li>
+          <p>
+            When you pretend to be consumed by your screen to avoid a conversation with someone you recognize.
+          </p>
+        </li>
+        <li>
+          <p>
+              When you stay connected with friends and family who live in different time zones.
+          </p>
+        </li>
+        <li>
+          <p>
+              When you base your self worth off of the reactions you receive on social media.
+          </p>
+        </li>
+        <li>
+          <p>
+              When you text someone about your emotions rather than talking face to face.
+          </p>
+        </li>
+        <li>
+          <p>
+              When you have the ability to share your story, which helps someone else feel less alone.
+          </p>
+        </li>
+      </ul>
     </div>
+    
 
   </section>
 
@@ -95,6 +131,30 @@
       <h1>WHY THINK ABOUT IT?</h1>
     </div>
 
+    <div class="content">
+        <p>
+            The use of technology and the role it plays in my relationships is something I find increasingly 
+            important to think about. Beginning during my undergraduate years in the Art program at the 
+            University of Wisconsin- Eau Claire, I have been making art about technology as a way to discuss
+            and process how I feel technology impacts, both positively and negatively, my relationships and 
+            other human interactions I see in my communities. <br><br>
+            Technology has advanced immensely in the last two hundred years, and personal-scale technology has 
+            advanced quite rapidly in the last thirty or so years. This has been personal computers, smartphones, 
+            watches, smart homes, classroom technology, and of course larger scale technological advances that 
+            impact medicine, travel, science, and military, which I focus on less in my work. As the presence of 
+            technology continues to build, the need to consider how technology interacts with and impacts our 
+            human society becomes more imperative. <br><br>
+            In my work thus far, including Project MESH, I consider and discuss the presence and impact of technology 
+            on small scale interpersonal interactions-- the relationship with the self, with other individuals, or with 
+            small groups or communities. Technology can facilitate the building, deepening, or maintaining of 
+            interpersonal relationships, which is something we are all aware of at this point. However, it can also 
+            create distance, a feeling of absence, or even alienation in our relationships, both those we forge in 
+            person or online. I want to create a space where folks can discuss and share work about both the positive 
+            and negative outcomes of technology’s presence in our relationships, but I think it is particularly 
+            important to make space to think intentionally and discuss openly the way that technology sometimes hinders 
+            our ability to feel connected or present with one another.
+        </p>
+      </div>
 
   </section>
 
