--- a/index.html
+++ b/index.html
@@ -147,18 +147,23 @@
   
     <div class="inspogrid">
         <div class="inspocontainer">
-          <img src="images/alfredojaar.jpeg">
+          <img src="images/alfredojaar.jpg">
           <span class="text">Alfredo Jaar<br>"Be Afraid of the Enormity of the Possible"</span>
         </div>
 
         <div class="inspocontainer">
-          <img src="images/follower.png">
-          <span class="text">Lauren McCarthy<br>"Follower"</span>
+          <img src="images/humanetech.jpg">
+          <span class="text">All Black Zine</span>
         </div>
 
         <div class="inspocontainer">
-          <img src="images/newera.jpeg">
+          <img src="images/newera.jpg">
           <span class="text">Doug Aitken<br>"New Era"</span>
+        </div>
+
+        <div class="inspocontainer">
+            <img src="images/trickmirror.jpg">
+            <span class="text">Jia Tolentino<br><i>Trick Mirror</i></span>
         </div>
 
         <div class="inspocontainer">
@@ -172,18 +177,13 @@
         </div>
 
         <div class="inspocontainer">
-          <img src="images/trickmirror.jpg">
-          <span class="text">Jia Tolentino<br><i>Trick Mirror</i></span>
-        </div>
+            <img src="images/follower.jpg">
+            <span class="text">Lauren McCarthy<br>"Follower"</span>
+          </div>
 
         <div class="inspocontainer">
-          <img src="images/posttextfuture.png">
+          <img src="images/posttextfuture.jpg">
           <span class="text">NYT Article<br>"Welcome to the Post-Text Future"</span>
-        </div>
-
-        <div class="inspocontainer">
-          <img src="images/ydenia.png">
-          <span class="text">Betsy Olaussen<br>"You Don't Even Notice It Anymore"</span>
         </div>
     </div>
   
@@ -277,16 +277,6 @@
           <img src="process_pngs/summer_versions/mockup spread 5 6.png">
           <img src="process_pngs/summer_versions/mockup spread 6 7.png">
           <img src="process_pngs/summer_versions/mockup spread 10 11.png">
-    </div>
-
-    <div class="processgrid">
-      <div class="item2center">
-        <img src="process_pngs/fall_versions/mockup cover.png" >
-      </div>
-        <img src="process_pngs/fall_versions/mockup spread 1 2.png">
-        <img src="process_pngs/fall_versions/mockup spread 2 3.png">
-        <img src="process_pngs/fall_versions/mockup spread 11 12.png">
-        <img src="process_pngs/fall_versions/mockup spread 15 16.png">
     </div>
 
 
