--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 <section id="P2" class="wrapper">
 
     <div class="think">
-      <h2>WHAT DOES THIS MEAN?</h2><br>
+      <h2>WHY IS THIS IMPORTANT TO ME?</h2><br>
       <h2>WHY THINK ABOUT IT?</h2>
     </div>
 
@@ -146,14 +146,20 @@
     </div>
 
     <div class="inspogrid">
-        <div class="inspocontainer">
-          <img src="images/alfredojaar.jpg">
-          <span class="text">Alfredo Jaar<br>"Be Afraid of the Enormity of the Possible"</span>
-        </div>
 
         <div class="inspocontainer">
           <img src="images/humanetech.jpg">
-          <span class="text">All Black Zine</span>
+          <span class="text">Tristan Harris <br> Center for Humane Technology</span>
+        </div>
+
+        <div class="inspocontainer">
+          <img src="images/trickmirror.jpg">
+          <span class="text">Jia Tolentino<br><i>Trick Mirror</i></span>
+        </div>
+
+        <div class="inspocontainer">
+          <img src="images/alfredojaar.jpg">
+          <span class="text">Alfredo Jaar<br>"Be Afraid of the Enormity of the Possible"</span>
         </div>
 
         <div class="inspocontainer">
@@ -162,13 +168,13 @@
         </div>
 
         <div class="inspocontainer">
-            <img src="images/trickmirror.jpg">
-            <span class="text">Jia Tolentino<br><i>Trick Mirror</i></span>
+          <img src="images/abz.png">
+          <span class="text">All Black Zine</span>
         </div>
 
         <div class="inspocontainer">
-          <img src="images/abz.png">
-          <span class="text">All Black Zine</span>
+          <img src="images/selkie.jpg">
+          <span class="text">Selkie Zine</span>
         </div>
 
         <div class="inspocontainer">
@@ -180,11 +186,6 @@
             <img src="images/follower.jpg">
             <span class="text">Lauren McCarthy<br>"Follower"</span>
           </div>
-
-        <div class="inspocontainer">
-          <img src="images/selkie.jpg">
-          <span class="text">Selkie Zine</span>
-        </div>
     </div>
 
     </section>
