--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   </section>
 
   <!--beginning of problem statment page-->
-  <section id="P3" class="wrapper">
+  <section id="P3" class="wrapper sections">
 
   <div class="problemstatement">
     <h1>STATEMENTS</h1>
@@ -84,52 +84,31 @@
       <ul>
         <li>
           <p>
-            Mesh is a dialogue about how technology changes the way we communicate with each other and with ourselves.
+            -When you are in a group of people who are more absorbed by their phones than by the people they are with.
           </p>
         </li>
+        <br>
         <li>
           <p>
-            When you are in a group of people who are more absorbed by their phones than by the people they are with.
+            -When you mindlessly scroll through your phone, minutes or hours disappearing.
           </p>
         </li>
+        <br>
         <li>
           <p>
-              When you mindlessly scroll through your phone, minutes or hours disappearing.
+            -When you are able to build community with people across the world.
           </p>
         </li>
+        <br>
         <li>
           <p>
-              When you are able to build community with people across the world.
+            -When you stay connected with friends and family who live in different time zones.
           </p>
         </li>
+        <br>
         <li>
           <p>
-              When you ghost or get ghosted.
-          </p>
-        </li>
-        <li>
-          <p>
-            When you pretend to be consumed by your screen to avoid a conversation with someone you recognize.
-          </p>
-        </li>
-        <li>
-          <p>
-              When you stay connected with friends and family who live in different time zones.
-          </p>
-        </li>
-        <li>
-          <p>
-              When you base your self worth off of the reactions you receive on social media.
-          </p>
-        </li>
-        <li>
-          <p>
-              When you text someone about your emotions rather than talking face to face.
-          </p>
-        </li>
-        <li>
-          <p>
-              When you have the ability to share your story, which helps someone else feel less alone.
+            -When you base your self worth off of the reactions you receive on social media.
           </p>
         </li>
       </ul>
@@ -140,7 +119,7 @@
 
   <!--beginning of research page-->
 
-  <section id="P4" class="wrapper">
+  <section id="P4" class="wrapper sections">
     <div class="research">
       <h1>RESEARCH AND INSPIRATION</h1>
     </div>
@@ -192,7 +171,7 @@
 
     <!--beginning of final page-->
 
-  <section id="P5" class="wrapper">
+  <section id="P5" class="wrapper sections">
       <div class="final">
         <h1>OUTCOME</h1>
       </div>
@@ -255,7 +234,7 @@
 
   <!--beginning of process page-->
 
-  <section id="P6" class="wrapper">
+  <section id="P6" class="wrapper sections">
     <div class="process">
       <h1>PROCESS</h1>
     </div>
@@ -297,40 +276,31 @@
       </div>
       <br>
 
-<!--
-    <div class="processgrid">
-
-          <img src="process_pngs/summer_versions/mockup cover.png">
-          <img src="process_pngs/summer_versions/mockup spread 1 2.png">
-          <img src="process_pngs/summer_versions/mockup spread 5 6.png">
-          <img src="process_pngs/summer_versions/mockup spread 6 7.png">
-          <img src="process_pngs/summer_versions/mockup spread 10 11.png">
-    </div>
-    -->
-
-
   </section>
 
 
 
   <!--beginning of moving forward page-->
 
-  <section id="P7" class="wrapper">
+  <section id="P7" class="wrapper sections">
     <div class="movingforward">
       <h1>MOVING FORWARD</h1>
     </div>
 
-    <div class="content">
+    <div class="content final">
       <p>
-          Project MESH is a space to build community and dialogue around the topic of humans’ relationship
-          to technology. I hope to highlight and deepen the benefits of technology in our relationships
-          and encourage awareness and mindfulness of the drawbacks, in order to ultimately strengthen our
-          relationships with each other, as humans. Moving forward, I hope to produce more volumes of
-          the MESH zine, encourage more people to submit work and join the conversation, and eventually
-          use the ideas behind Project MESH to create an in-person interactive installation.
+          What is next for Project MESH??
       </p>
     </div>
 
+  </section>
+
+  <section id="P8" class="wrapper sections">
+    <div class="thankyou">
+      <p>
+        THANK YOU!
+      </p>
+    </div>
   </section>
 
 
